fix artery tests by setting --add-opens=java.base/sun.nio.ch=ALL-UNNAMED